kubernetes/apps/monitoring/kube-prometheus-stack/app/http-route.yaml
---
### Defining routes via helm values for this chart is still in early beta / unstable.
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: https
  hostnames:
    - prometheus.${DOMAIN}
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: https
  hostnames:
    - grafana.${DOMAIN}
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: https
  hostnames:
    - alertmanager.${DOMAIN}
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
