kubernetes/apps/monitoring/kube-prometheus-stack/app/httproute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: https
  hostnames:
    - grafana.${DOMAIN}
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
