kubernetes/apps/monitoring/kube-prometheus-stack/app/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: https
  hostnames:
    - prometheus.${DOMAIN}
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
